--- a/flutter_rme/pubspec.yaml
+++ b/flutter_rme/pubspec.yaml
@@ -30,6 +30,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.13.6
+  xml: ^6.3.0
+  flutter_html: ^3.0.0-alpha.5
+  data_table_2: ^2.3.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
