--- a/flutter_rme/pubspec.yaml
+++ b/flutter_rme/pubspec.yaml
@@ -32,7 +32,8 @@ dependencies:
     sdk: flutter
   http: ^0.13.6
   xml: ^6.3.0
-  flutter_html: ^3.0.0-alpha.5
+  collection: ^1.17.2
+  html: ^0.15.0
   data_table_2: ^2.3.0
 
 
