--- a/flutter_rme/pubspec.yaml
+++ b/flutter_rme/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   csv: ^6.0.0
+  syncfusion_flutter_charts: ^29.2.11
 
 dev_dependencies:
   flutter_test:
